--- a/BlazorInputMoney/Components/Pages/Home.razor
+++ b/BlazorInputMoney/Components/Pages/Home.razor
@@ -26,25 +26,29 @@
 
 <div class="border border-2 my-2 p-2">
     <div>Not Bold, class="w-50":</div>
-    <InputMoney @bind-Value="money4" style="font-weight:normal" class="w-50" ;></InputMoney>
+    <InputMoney @bind-Value="money4"
+                style="font-weight:normal" class="w-50"></InputMoney>
     <span class="ms-3">Value: @money4</span>
 </div>
 
 <div class="border border-2 my-2 p-2">
     <div>Has ID of fred:</div>
-    <InputMoney @bind-Value="money5" id="fred"></InputMoney>
+    <InputMoney @bind-Value="money5"
+                id="fred"></InputMoney>
     <span class="ms-3">Value: @money5</span>
 </div>
 
 <div class="border border-2 my-2 p-2">
     <div>DecimalDigits="3":</div>
-    <InputMoney @bind-Value="money6" DecimalDigits="3"></InputMoney>
+    <InputMoney @bind-Value="money6"
+                DecimalDigits="3"></InputMoney>
     <span class="ms-3">Value: @money6</span>
 </div>
 
 <div class="border border-2 my-2 p-2">
     <div>SelectOnFocus="false":</div>
-    <InputMoney @bind-Value="money7" SelectOnFocus="false"></InputMoney>
+    <InputMoney @bind-Value="money7"
+                SelectOnFocus="false"></InputMoney>
     <span class="ms-3">Value: @money7</span>
 </div>
 
